盐碱化和冻土完成